{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 66,
  "lineage": "dfd4005e-2eff-1cc8-6689-62b668077bb3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ubuntu-in-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkInterfaces/ubuntu-in-mgmt",
            "internal_domain_name_suffix": "2hfoppd1utju3acyuukvu4f5vf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ubuntu-in-mgmt",
                "primary": true,
                "private_ip_address": "10.10.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/publicIPAddresses/ubuntu-in-mgmt-pip",
                "subnet_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-1F-6F-AB",
            "name": "ubuntu-in-mgmt",
            "private_ip_address": "10.10.0.5",
            "private_ip_addresses": [
              "10.10.0.5"
            ],
            "resource_group_name": "seveluch-asav-group",
            "virtual_machine_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Compute/virtualMachines/ubuntu-in-vm"
          },
          "dependencies": [
            "azurerm_public_ip.ubuntu-in-mgmt-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ubuntu-out-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkInterfaces/ubuntu-out-mgmt",
            "internal_domain_name_suffix": "2hfoppd1utju3acyuukvu4f5vf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ubuntu-out-mgmt",
                "primary": true,
                "private_ip_address": "10.10.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/publicIPAddresses/ubuntu-out-mgmt-pip",
                "subnet_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-25-2E-19",
            "name": "ubuntu-out-mgmt",
            "private_ip_address": "10.10.0.4",
            "private_ip_addresses": [
              "10.10.0.4"
            ],
            "resource_group_name": "seveluch-asav-group",
            "virtual_machine_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Compute/virtualMachines/ubuntu-out-vm"
          },
          "dependencies": [
            "azurerm_public_ip.ubuntu-out-mgmt-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "in-mgmt-nic-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkInterfaces/ubuntu-in-mgmt|/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkSecurityGroups/fw-allow-all",
            "network_interface_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkInterfaces/ubuntu-in-mgmt",
            "network_security_group_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkSecurityGroups/fw-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.ubuntu-in-mgmt",
            "azurerm_network_security_group.allow-all",
            "azurerm_public_ip.ubuntu-in-mgmt-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "out-mgmt-nic-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkInterfaces/ubuntu-out-mgmt|/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkSecurityGroups/fw-allow-all",
            "network_interface_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkInterfaces/ubuntu-out-mgmt",
            "network_security_group_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkSecurityGroups/fw-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.ubuntu-out-mgmt",
            "azurerm_network_security_group.allow-all",
            "azurerm_public_ip.ubuntu-out-mgmt-pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/networkSecurityGroups/fw-allow-all",
            "location": "eastus",
            "name": "fw-allow-all",
            "resource_group_name": "seveluch-asav-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP-Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ubuntu-in-mgmt-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/publicIPAddresses/ubuntu-in-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.44.231",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ubuntu-in-mgmt-pip",
            "resource_group_name": "seveluch-asav-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ubuntu-out-mgmt-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/publicIPAddresses/ubuntu-out-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.45.28",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ubuntu-out-mgmt-pip",
            "resource_group_name": "seveluch-asav-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/routeTables/mgmt",
            "location": "eastus",
            "name": "mgmt",
            "resource_group_name": "seveluch-asav-group",
            "route": [],
            "subnets": [
              "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/mgmt"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/24",
              "ace:cab:deca:1::/64"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "seveluch-asav-group",
            "virtual_network_name": "seveluch-asav-group-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/routeTables/mgmt",
            "subnet_id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.mgmt",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16",
              "ace:cab:deca::/48"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bce7cae1-a47b-4ed3-8058-a5155a78bfad",
            "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet",
            "location": "eastus",
            "name": "seveluch-asav-group-vnet",
            "resource_group_name": "seveluch-asav-group",
            "subnet": [
              {
                "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/inside",
                "name": "inside"
              },
              {
                "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "id": "/subscriptions/33d2517e-ca88-46aa-beb2-74ff1dd61b41/resourceGroups/seveluch-asav-group/providers/Microsoft.Network/virtualNetworks/seveluch-asav-group-vnet/subnets/outside",
                "name": "outside"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}